# MirrorTalk

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  friend_graph.py  orchestrator.py  persona_graph.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py
backend/app/pipelines/: __init__.py  deep_profile.py  profile_builder.py
backend/app/services/: __init__.py  cache.py  chunking.py  compaction.py  database.py  document_parser.py  embedding.py  experiment.py  external_tools.py  graph_rag.py  guards.py  hyde.py  memory.py  model_router.py  planner.py  provider.py  rerank.py  review.py  safety.py  semantic_cache.py  stream_parser.py  tool_policy.py
backend/app/tools/: __init__.py
backend/scripts/: eval_retrieval.py
backend/tests/: conftest.py  test_cache.py  test_chunking.py  test_guards.py  test_memory.py  test_safety.py
docs/: CONTEXT.md  INTERVIEW_GUIDE.md  INTERVIEW_GUIDE_V0610.md
docs/adr/: 0001-dual-agent-architecture.md  0002-medium-granularity-tools.md  0003-tags-first-ocean-secondary.md  0004-majority-consensus-aggregation.md  0005-local-first-hybrid-cloud.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: build_frontend.bat  start_backend.sh
scripts/archive/: _add_debug.py  _add_tb.py  _add_testconn.py  _check_cfg.py  _fix_config.py  _fix_db.py  _fix_fallback.py  (+20 more)
(+9 files in other folders)
